changed some layout

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 </head>
 <body>
-  <nav class="navbar navbar-inverse">
-    <ul class="nav nav-pills">
-      <li role="presentation"><a>Feed</a></li>
-      <li role="presentation"><a>Playlist</a></li>
-    </ul>
-  </nav>
+  <div class="jumbotr">
+    <div class="navbar-header">
+      <h1>Pending Orderz</h1>
+    </div>
+      <div class="navbar-collapse collapse navbar-responsive-collapse">
+        <ul class="nav navbar-nav">
+          <li role="presentation"><a>Bahn Bahn</a></li>
+        </ul>
+      </div>
+  </div>
   <div id="container">
   </div>
 </body>
